# metro_test-task

./: .dockerignore  .env-example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
app/: main.py  parser.py  scheduler.py
app/alembic/: env.py
app/alembic/versions/: 2024_08_07_0419-304c57abc39a_.py
app/api/: __init__.py  main.py
app/api/news/: handlers.py
app/api/v1/: __init__.py
app/api/v1/news/: handlers.py  schemas.py  services.py
app/core/: config.py
app/core/models/: __init__.py  base.py  db_helper.py  news.py
app/domain/entities/: news.py
app/domain/services/: news.py
app/gateways/postgres/: database.py
app/gateways/postgres/models/: base.py  news.py
app/gateways/postgres/repositories/: news.py
app/services/: news.py
docker_compose/: app.yaml  storage.yaml
