[tool.poetry]
name = "metro-testtask"
version = "0.1.0"
description = ""
authors = ["zakhep66 <sur.mikhael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.112.0"}
uvicorn = "^0.30.5"
sqlalchemy = "^2.0.32"
aiosqlite = "^0.20.0"
alembic = "^1.13.2"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
